read_sql now takes workshop_id as optional arg
